5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1593_1803.log
== TEST (2019-04-01 22:00:21) 
-- CODE:
D1 = int(input(" digite um digito "))
D2 = int(input(" digite um digito "))
D3 = int(input(" digite um digito "))
D4 = int(input(" digite um digito "))
soma = ((D1 * 2) + (D2 * 3) + (D3 * 4) + (D4 * 5))
divisao = (soma % 11)
print(divisao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    D2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:01:36) 
-- CODE:
D1 = int(input(" digite um digito "))
D2 = int(input(" digite um digito "))
D3 = int(input(" digite um digito "))
D4 = int(input(" digite um digito "))
soma = ((D1 * 2) + (D2 * 3) + (D3 * 4) + (D4 * 5))
divisao = (soma % 11)
print(divisao)
-- EXECUTION TIME:
0.159688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1803/main.py", line 2, in <module>
    D2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:13:26) 
-- CODE:
num = int(input( "qual o seu numero"))
a = num//1000 * 2
b = num//100 * 3
c = num//10 * 4
d = num//1 * 5
soma = ( a + b + c + d )
divisaor ( soma % 11 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    divisaor ( soma % 11 )
NameError: name 'divisaor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:14:21) 
-- CODE:
num = int(input( "qual o seu numero"))
a = num//1000 * 2
b = num//100 * 3
c = num//10 * 4
d = num//1 * 5
soma = ( a + b + c + d )
divisaor ( soma % 11 )
print( divisaor )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    divisaor ( soma % 11 )
NameError: name 'divisaor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:14:48) 
-- CODE:
num = int(input( "qual o seu numero"))
a = num//1000 * 2
b = num//100 * 3
c = num//10 * 4
d = num//1 * 5
soma = ( a + b + c + d )
divisaor = ( soma % 11 )
print( divisaor )
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:15:39) 
-- CODE:
num = int(input( "qual o seu numero"))
a = num//1000 * 2
b = num//100 * 3
c = num//10 * 4
d = num//1 * 5
soma = ( a + b + c + d )
divisaor = ( soma % 11 )
print( divisaor )
-- EXECUTION TIME:
0.208486
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
7
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
9
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:16:02) 
-- CODE:
num = int(input( "qual o seu numero"))
a = num//1000 * 2
b = num//100 * 3
c = num//10 * 4
d = num//1 * 5
soma = ( a + b + c + d )
divisaor = ( soma % 11 )
print( soma )
-- OUTPUT:
10864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
